# FibRust

./: .fibcalc_calibration.json  .gitignore  CLAUDE.md  Cargo.toml  Claude.md  Debug.md  DebugPlan.md  LICENSE  PlanRefact.md  README.md  deny.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
crates/fibcalc/: Cargo.toml
crates/fibcalc-bigfft/: Cargo.toml
crates/fibcalc-bigfft/src/: allocator.rs  arith_generic.rs  bump.rs  fermat.rs  fft.rs  fft_cache.rs  fft_core.rs  fft_poly.rs  fft_recursion.rs  lib.rs  memory_est.rs  pool.rs  pool_warming.rs  scan.rs
crates/fibcalc-calibration/: Cargo.toml
crates/fibcalc-calibration/src/: adaptive.rs  calibration.rs  io.rs  lib.rs  microbench.rs  profile.rs  runner.rs
crates/fibcalc-cli/: Cargo.toml
crates/fibcalc-cli/src/: completion.rs  lib.rs  output.rs  presenter.rs  progress_eta.rs  ui.rs
crates/fibcalc-core/: Cargo.toml
crates/fibcalc-core/benches/: fibonacci.rs
crates/fibcalc-core/src/: arena.rs  calculator.rs  calculator_gmp.rs  common.rs  constants.rs  doubling_framework.rs  dynamic_threshold.rs  fastdoubling.rs  fft_based.rs  fft_wrappers.rs  generator.rs  generator_iterative.rs  iterator.rs  lib.rs  matrix.rs  matrix_framework.rs  matrix_ops.rs  matrix_types.rs  memory_budget.rs  modular.rs  observer.rs  observers.rs  options.rs  pool.rs  progress.rs  registry.rs  strategy.rs  threshold_types.rs
crates/fibcalc-core/tests/: properties.rs
crates/fibcalc-memory/: Cargo.toml
crates/fibcalc-memory/src/: arena.rs  lib.rs  pool.rs  stats.rs  thread_local.rs  warming.rs
crates/fibcalc-orchestration/: Cargo.toml
crates/fibcalc-orchestration/src/: calculator_selection.rs  interfaces.rs  lib.rs  orchestrator.rs
crates/fibcalc-tui/: Cargo.toml
crates/fibcalc-tui/src/: bridge.rs  chart.rs  footer.rs  header.rs  keymap.rs  lib.rs  logs.rs  messages.rs  metrics.rs  model.rs  sparkline.rs  styles.rs
crates/fibcalc/src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  version.rs
crates/fibcalc/tests/: e2e.rs  golden.rs  proptest.rs
crates/fibrust-cli/: Cargo.toml
crates/fibrust-cli/src/: lib.rs  main.rs
crates/fibrust-cli/src/tui/: app.rs  event.rs  mod.rs  state.rs  style.rs  terminal.rs  ui.rs
crates/fibrust-cli/src/tui/widgets/: comparison.rs  header.rs  input.rs  mod.rs  progress.rs  result.rs  system_info.rs
crates/fibrust-cli/tests/: tui_tests.rs
docs/: ALGORITHMS.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_COMPILATION.md  INSTALLATION.md  PERFORMANCE.md  PRD.md  SCORING_SELF_ASSESSMENT.md  SECURITY.md  TROUBLESHOOTING.md
docs/plans/: 2026-02-21-score-optimization-design.md  2026-02-21-score-optimization-implementation.md  2026-02-24-refactoring-design.md  2026-02-24-refactoring-plan.md  dashboard.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cross_algorithm.rs  fuzz_fast_doubling.rs  fuzz_fft.rs  fuzz_matrix.rs
src/: lib.rs
tests/: allocator_integration.rs  golden.rs
tests/testdata/: fibonacci_golden.json
