[package]
name = "fibcalc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fibcalc-core = { path = "../crates/fibcalc-core" }
num-bigint = "0.4"

[[bin]]
name = "fuzz_fast_doubling"
path = "fuzz_targets/fuzz_fast_doubling.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_matrix"
path = "fuzz_targets/fuzz_matrix.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fft"
path = "fuzz_targets/fuzz_fft.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cross_algorithm"
path = "fuzz_targets/fuzz_cross_algorithm.rs"
test = false
doc = false
bench = false
