[package]
name = "fibcalc-calibration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["mathematics", "development-tools::profiling"]
description = "Auto-tuning, adaptive benchmarks, and calibration profiles"

[dependencies]
fibcalc-core = { workspace = true }
fibcalc-bigfft = { workspace = true }
num-bigint = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
