[package]
name = "fibcalc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["mathematics", "algorithms"]
description = "Core Fibonacci algorithms, strategies, observers, and dynamic thresholds"

[features]
default = []
gmp = ["dep:rug"]

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rug = { workspace = true, optional = true }
fibcalc-bigfft = { workspace = true }
fibcalc-memory = { workspace = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fibonacci"
harness = false

[lints]
workspace = true
