[package]
name = "fibcalc-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["memory-management", "algorithms"]
description = "Unified memory management: pools, arenas, and thread-local allocators for FibCalc"

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
bumpalo = { workspace = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
