[package]
name = "fibcalc-orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["concurrency", "mathematics"]
description = "Parallel execution, calculator selection, and result analysis"

[dependencies]
fibcalc-core = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
num-bigint = { workspace = true }

[lints]
workspace = true
