[package]
name = "fibcalc-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Interactive TUI dashboard using ratatui with Elm architecture"

[dependencies]
fibcalc-core = { workspace = true }
fibcalc-orchestration = { workspace = true }
num-bigint = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }

[lints]
workspace = true
